<resources>
    <string name="app_name">Memory Map Share</string>
    <string name="location">Memory Map Share</string>
    <string name="ok">OK</string>
    <string name="next">次へ</string>
    <string name="cancel">キャンセル</string>
    <string name="openSetting">設定を開く</string>
    <string name="location_permission_denied_dialog_title">位置情報</string>
    <string name="location_permission_denied_dialog_message">位置情報の使用権限が拒否されました。\n後から設定する場合、アプリ設定から権限を設定し直してください。</string>
    <string name="locationText">%1$d %2$f, %3$f</string>
    <string name="decide">決定</string>
    <string name="emptyImage">NO IMAGE</string>
    <string name="selectImage">画像を選択</string>
    <string name="content">メモ</string>
    <string name="time_date">日にち</string>>
    <string name="date">yyyy/M/d</string>
    <string name="dateSelect">日にちを選択</string>
    <string name="submit">決定</string>
    <string name="createAccount">アカウント作成</string>
    <string name="passwordForget">パスワードを忘れた場合</string>
    <string name="login">ログイン</string>
    <string name="password">パスワードを入力</string>
    <string name="email">メールアドレスを入力</string>
    <string name="inputCorrectly">正しく入力してください</string>
    <string name="userName">ユーザー名</string>
    <string name="userNameInput">ユーザー名を入力</string>
    <string name="passwordConfirm">パスワード（確認）</string>
    <string name="register">登録</string>
    <string name="emailLabel">メールアドレス</string>
    <string name="group_private">プライベート</string>
    <string name="setting">設定</string>
    <string name="myPage">マイページ</string>
    <string name="logout">ログアウト</string>
    <string name="allMarker">登録一覧</string>
    <string name="friendAdd">友だちを探す</string>
    <string name="locationName">場所の名前</string>
    <string name="markerEmpty">NO MARKER</string>
    <string name="userIdDisplay">ID : %1$s</string>
    <string name="privateText">PRIVATE</string>
    <string name="profileEdit">プロフィール編集</string>
    <string name="profileEdit2">プロフィール編集</string>
    <string name="profileImageEdit">プロフィール画像編集</string>
    <string name="selectIconImage">画像を選択</string>
    <string name="userNameEdit">ユーザー名を編集</string>
    <string name="searchUser">ユーザーを検索</string>
    <string name="searchHint">ユーザー名 または IDを入力</string>
    <string name="addButton">追加</string>
    <string name="noSearchedUser">検索結果はありません</string>
    <string name="removeFriend">解除</string>
    <string name="deleteButton">グループを削除</string>
    <string name="createGroup">グループを作成</string>
    <string name="editGroup">グループを編集</string>
    <string name="groupName">グループ名</string>
    <string name="inputGroupName">新しいグループ名を入力</string>
    <string name="memberSelect">参加するメンバーを選択</string>
    <string name="noFriend">友だちを追加してください</string>
    <string name="create">作成</string>
    <string name="createMarker">マーカーを作成</string>
    <string name="groupSelect">グループを選択</string>
    <string name="clipboard">クリップボードにコピーしました</string>
    <string name="uploading">アップロード中…</string>
    <string name="channel_name_1">グループ作成</string>
    <string name="channel_description_1">自分を含むグループが作成された時に通知します。</string>
    <string name="channel_content_1">%1$sさんがグループを作成しました。</string>
    <string name="channel_name_2">マーカー登録</string>
    <string name="channel_description_2">自分を含むグループにて他のユーザーによってマーカーが登録された時に通知します。</string>
    <string name="channel_content_2">%1$sさんがマーカーを登録しました。</string>
    <string name="selectEditGroup">編集するグループを選択</string>
    <string name="channel_name_3">グループ編集</string>
    <string name="channel_description_3">自分を含むグループが編集された時に通知します。</string>
    <string name="channel_content_3">%1$sさんがグループを編集しました。</string>
    <string name="deleteConfirm">グループを削除しますか？</string>
    <string name="deleteMarkerConfirm">マーカーを削除しますか？</string>
    <string name="deleteMarker">マーカーを削除</string>
    <string name="yes">はい</string>
    <string name="edit_marker">編集</string>
    <string name="edit_marker2">マーカーを編集</string>
    <string name="logoutConfirm">ログアウトしますか？</string>
</resources>