<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="locationName"
            type="androidx.lifecycle.MutableLiveData&lt;String>" />

        <variable
            name="memo"
            type="androidx.lifecycle.MutableLiveData&lt;String>" />

    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/locationNameLabel"
                android:layout_marginTop="24dp"
                android:layout_marginStart="12dp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                android:text="@string/locationName"/>

            <EditText
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:id="@+id/location_name_input"
                android:inputType="text"
                app:layout_constraintTop_toBottomOf="@id/locationNameLabel"
                app:layout_constraintStart_toStartOf="parent"
                android:text="@={locationName}"
                android:layout_marginStart="12dp"
                android:layout_marginEnd="12dp"
                app:layout_constraintEnd_toEndOf="parent"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/content_label"
                android:layout_marginTop="20dp"
                android:layout_marginStart="12dp"
                app:layout_constraintTop_toBottomOf="@id/location_name_input"
                app:layout_constraintStart_toStartOf="parent"
                android:text="@string/content"/>

            <EditText
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:id="@+id/content_input"
                android:inputType="textMultiLine"
                android:text="@={memo}"
                app:layout_constraintTop_toBottomOf="@id/content_label"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="12dp"
                android:layout_marginEnd="12dp"
                app:layout_constraintEnd_toEndOf="parent"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/time_date_label"
                android:layout_marginTop="36dp"
                android:layout_marginStart="12dp"
                app:layout_constraintTop_toBottomOf="@id/content_input"
                app:layout_constraintStart_toStartOf="parent"
                android:text="@string/time_date"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/time_date_display"
                android:textSize="18sp"
                android:layout_marginStart="24dp"
                app:layout_constraintTop_toTopOf="@id/time_date_label"
                app:layout_constraintStart_toEndOf="@id/time_date_label"
                tools:text="@string/date"/>

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/date_select_button"
                app:layout_constraintTop_toTopOf="@id/time_date_display"
                app:layout_constraintBottom_toBottomOf="@id/time_date_display"
                app:layout_constraintStart_toEndOf="@id/time_date_display"
                android:text="@string/dateSelect"
                android:layout_marginStart="24dp"/>

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/delete_button"
                android:layout_marginBottom="12dp"
                android:layout_marginTop="32dp"
                android:text="@string/deleteButton"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/date_select_button"
                app:layout_constraintBottom_toTopOf="@id/submit_button"/>

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/submit_button"
                app:layout_constraintTop_toBottomOf="@id/delete_button"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:text="@string/submit"
                android:layout_marginTop="24dp"/>


        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</layout>