<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="name"
            type="androidx.lifecycle.MutableLiveData&lt;String>" />

        <variable
            name="userForIcon"
            type="com.kaz_furniture.memoryMapShare.data.User" />

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:id="@+id/container"
        android:layout_height="match_parent">


        <TextView
            android:id="@+id/profileImageLabel"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginStart="12dp"
            android:text="@string/profileImageEdit"
            android:textSize="18sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>


        <Button
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:id="@+id/profileImageSelect"
            android:text="@string/selectIconImage"
            android:layout_marginStart="40dp"
            android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@id/profileImageLabel"
            app:layout_constraintStart_toStartOf="parent"/>

        <ImageView
            android:layout_width="132dp"
            android:layout_height="132dp"
            android:id="@+id/roundedImageView"
            android:scaleType="centerCrop"
            app:userIconFromUser="@{userForIcon}"
            app:layout_constraintTop_toTopOf="@id/profileImageLabel"
            app:layout_constraintStart_toEndOf="@id/profileImageSelect"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toTopOf="@id/userNameEdit"/>


        <TextView
            android:id="@+id/userNameEdit"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:layout_marginStart="12dp"
            android:text="@string/userNameEdit"
            android:textSize="18sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/profileImageSelect"/>

        <EditText
            android:id="@+id/userNameInput"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:maxLength="20"
            android:inputType="text"
            android:text="@={name}"
            android:hint="@string/userNameInput"
            android:textSize="16sp"
            android:layout_marginTop="8dp"
            android:layout_marginStart="32dp"
            android:layout_marginEnd="32dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/userNameEdit" />

        <Button
            android:id="@+id/saveButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:text="@string/register"
            android:layout_marginStart="40dp"
            android:layout_marginEnd="40dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/userNameInput" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>