<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
    <data>
        <variable
            name="groupNameInput"
            type="androidx.lifecycle.MutableLiveData&lt;String>" />

    </data>
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/edit_group_select_label"
            android:text="@string/selectEditGroup"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="12dp"
            android:layout_marginStart="12dp"/>

        <TextView
            android:layout_width="172dp"
            android:layout_height="wrap_content"
            android:id="@+id/group_name_display"
            tools:text="@string/dateSelect"
            android:textSize="16sp"
            android:maxLines="1"
            android:ellipsize="end"
            android:layout_marginTop="8dp"
            android:layout_marginStart="16dp"
            android:layout_marginBottom="4dp"
            android:paddingStart="12dp"
            android:paddingTop="12dp"
            android:paddingBottom="12dp"
            android:paddingEnd="20sp"
            android:background="@drawable/background_group_display"
            app:layout_constraintTop_toBottomOf="@id/edit_group_select_label"
            app:layout_constraintStart_toStartOf="parent"/>

        <View
            android:layout_width="1dp"
            android:layout_height="0dp"
            android:background="#cc33cc"
            android:id="@+id/vertical_bar"
            app:layout_constraintTop_toTopOf="@id/group_name_display"
            app:layout_constraintBottom_toBottomOf="@id/group_name_display"
            app:layout_constraintEnd_toEndOf="@id/group_name_display"
            android:layout_marginEnd="16dp"/>

        <androidx.appcompat.widget.AppCompatImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_baseline_arrow_drop_down_24"
            android:id="@+id/widget_dropdown"
            app:layout_constraintTop_toTopOf="@id/group_name_display"
            app:layout_constraintBottom_toBottomOf="@id/group_name_display"
            app:layout_constraintEnd_toEndOf="@id/group_name_display"
            app:layout_constraintStart_toStartOf="@id/vertical_bar"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/group_name_label"
            android:text="@string/groupName"
            app:layout_constraintTop_toBottomOf="@id/group_name_display"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="16dp"
            android:layout_marginStart="12dp"/>

        <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/group_name_edit_text"
            android:text="@={groupNameInput}"
            android:maxLines="1"
            android:hint="@string/inputGroupName"
            android:inputType="text"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@id/group_name_label"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/member_select_label"
            android:text="@string/memberSelect"
            android:layout_marginStart="12dp"
            android:layout_marginTop="20dp"
            app:layout_constraintTop_toBottomOf="@id/group_name_edit_text"
            app:layout_constraintStart_toStartOf="parent"/>

        <com.kaz_furniture.memoryMapShare.view.GroupMemberEditView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:id="@+id/group_member_view"
            android:layout_marginTop="12dp"
            app:layout_constraintTop_toBottomOf="@id/member_select_label"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toTopOf="@id/delete_button"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/delete_button"
            android:layout_marginBottom="12dp"
            android:layout_marginTop="12dp"
            android:backgroundTint="#696969"
            android:text="@string/deleteButton"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/group_member_view"
            app:layout_constraintBottom_toTopOf="@id/create_button"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/create_button"
            android:text="@string/decide"
            android:layout_marginBottom="12dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/delete_button"
            app:layout_constraintBottom_toBottomOf="parent"/>



    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>