<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <data>
        <variable
            name="groupNameInput"
            type="androidx.lifecycle.MutableLiveData&lt;String>" />

    </data>
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/group_name_label"
            android:text="@string/groupName"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="12dp"
            android:layout_marginStart="12dp"/>

        <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/group_name_edit_text"
            android:text="@={groupNameInput}"
            android:maxLines="1"
            android:hint="@string/inputGroupName"
            android:inputType="text"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@id/group_name_label"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/member_select_label"
            android:text="@string/memberSelect"
            android:layout_marginStart="12dp"
            android:layout_marginTop="20dp"
            app:layout_constraintTop_toBottomOf="@id/group_name_edit_text"
            app:layout_constraintStart_toStartOf="parent"/>

        <com.kaz_furniture.memoryMapShare.view.GroupMemberSelectView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:id="@+id/group_member_view"
            android:layout_marginTop="12dp"
            app:layout_constraintTop_toBottomOf="@id/member_select_label"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toTopOf="@id/create_button"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/create_button"
            android:layout_marginBottom="24dp"
            android:text="@string/create"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/group_member_view"
            app:layout_constraintBottom_toBottomOf="parent"/>



    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>