<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="locationName"
            type="androidx.lifecycle.MutableLiveData&lt;String>" />

        <variable
            name="memo"
            type="androidx.lifecycle.MutableLiveData&lt;String>" />

    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.kaz_furniture.memoryMapShare.view.SelectedImageView
            android:layout_width="match_parent"
            android:layout_height="160dp"
            android:id="@+id/selectedImageView"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/selectImageButton"
            app:layout_constraintTop_toBottomOf="@id/selectedImageView"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:text="@string/selectImage"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/locationNameLabel"
            android:layout_marginTop="12dp"
            android:layout_marginStart="12dp"
            app:layout_constraintTop_toBottomOf="@id/selectImageButton"
            app:layout_constraintStart_toStartOf="parent"
            android:text="@string/locationName"/>

        <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/location_name_input"
            android:inputType="text"
            app:layout_constraintTop_toBottomOf="@id/locationNameLabel"
            app:layout_constraintStart_toStartOf="parent"
            android:text="@={locationName}"
            android:layout_marginStart="12dp"
            android:layout_marginEnd="12dp"
            app:layout_constraintEnd_toEndOf="parent"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/content_label"
            android:layout_marginTop="16dp"
            android:layout_marginStart="12dp"
            app:layout_constraintTop_toBottomOf="@id/location_name_input"
            app:layout_constraintStart_toStartOf="parent"
            android:text="@string/content"/>

        <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/content_input"
            android:inputType="textMultiLine"
            android:text="@={memo}"
            app:layout_constraintTop_toBottomOf="@id/content_label"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="12dp"
            android:layout_marginEnd="12dp"
            app:layout_constraintEnd_toEndOf="parent"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/time_date_label"
            android:layout_marginTop="32dp"
            android:layout_marginStart="12dp"
            app:layout_constraintTop_toBottomOf="@id/content_input"
            app:layout_constraintStart_toStartOf="parent"
            android:text="@string/time_date"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/time_date_display"
            android:textSize="18sp"
            android:layout_marginStart="24dp"
            app:layout_constraintTop_toTopOf="@id/time_date_label"
            app:layout_constraintStart_toEndOf="@id/time_date_label"
            tools:text="@string/date"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/date_select_button"
            app:layout_constraintTop_toTopOf="@id/time_date_display"
            app:layout_constraintBottom_toBottomOf="@id/time_date_display"
            app:layout_constraintStart_toEndOf="@id/time_date_display"
            android:text="@string/dateSelect"
            android:layout_marginStart="24dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/group_label"
            android:layout_marginTop="28dp"
            app:layout_constraintStart_toStartOf="@id/time_date_label"
            app:layout_constraintTop_toBottomOf="@id/date_select_button"
            android:text="@string/groupSelect"/>

        <TextView
            android:layout_width="144dp"
            android:layout_height="wrap_content"
            android:id="@+id/group_name_display"
            tools:text="@string/dateSelect"
            android:textSize="16sp"
            android:layout_marginStart="32dp"
            android:paddingStart="12dp"
            android:paddingTop="12dp"
            android:paddingBottom="12dp"
            android:paddingEnd="20sp"
            android:background="@drawable/background_group_display"
            app:layout_constraintTop_toTopOf="@id/group_label"
            app:layout_constraintStart_toEndOf="@id/group_label"/>

        <View
            android:layout_width="1dp"
            android:layout_height="0dp"
            android:background="#cc33cc"
            android:id="@+id/vertical_bar"
            app:layout_constraintTop_toTopOf="@id/group_name_display"
            app:layout_constraintBottom_toBottomOf="@id/group_name_display"
            app:layout_constraintEnd_toEndOf="@id/group_name_display"
            android:layout_marginEnd="16dp"/>

        <androidx.appcompat.widget.AppCompatImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_baseline_arrow_drop_down_24"
            android:id="@+id/widget_dropdown"
            app:layout_constraintTop_toTopOf="@id/group_name_display"
            app:layout_constraintBottom_toBottomOf="@id/group_name_display"
            app:layout_constraintEnd_toEndOf="@id/group_name_display"
            app:layout_constraintStart_toStartOf="@id/vertical_bar"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/submit_button"
            app:layout_constraintTop_toBottomOf="@id/group_name_display"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:text="@string/submit"
            android:layout_marginTop="24dp"/>

    </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</layout>